--- a/content/data/config.json
+++ b/content/data/config.json
@@ -90,5 +90,6 @@
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
-    }
+    },
+    "domain": "https://knowledgeable-birch-c69e5.netlify.app"
 }
